# marketnews

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  db_setup.py  docker-compose.yml  marketnews.py  pyproject.toml  sample.py
static/: style.css
templates/: article.html  index.html  layout.html
